v2_ros2_ws/log/build_2023-09-13_09-31-15/robot/stderr.log
  File "/home/jetson/ros2_ws/install/robot/lib/python3.8/site-packages/robot/motor_controller.py", line 34
    print(self.spin)uj
                    ^
SyntaxError: invalid syntax

